--- a/index.html
+++ b/index.html
@@ -3,52 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transcriptor de Audio IA</title>
+    <title>Panel de Análisis de Instagram</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Transcriptor de Audio IA</h1>
+        <!-- Encabezado -->
+        <header class="header">
+            <img src="450_1000.webp" alt="Logo de Instagram" class="instagram-logo">
+            <h1>Panel de Análisis de Instagram</h1>
         </header>
 
-        <section id="menu" class="menu">
-            <div class="file-upload">
-                <input type="file" id="audioInput" accept="audio/*">
-                <label for="audioInput" class="file-label">📂 Cargar archivo de audio</label>
-            </div>
-            <div class="controls">
-                <button id="transcribeButton" class="button primary">📝 Transcribir</button>
-                <button id="clearButton" class="button secondary">🗑️ Limpiar</button>
-                <button id="downloadPdfButton" class="button primary">📄 Descargar PDF</button>
+        <!-- Filtros -->
+        <section class="filters">
+            <h2>Filtros</h2>
+            <form id="filtersForm">
+                <div class="filter-group">
+                    <div class="filter">
+                        <label for="dateFrom">Desde:</label>
+                        <input type="date" id="dateFrom" name="dateFrom">
+                    </div>
+                    <div class="filter">
+                        <label for="dateTo">Hasta:</label>
+                        <input type="date" id="dateTo" name="dateTo">
+                    </div>
+                </div>
+                <div class="filter">
+                    <label for="sentiment">Sentimiento:</label>
+                    <select id="sentiment" name="sentiment">
+                        <option value="all">Todos</option>
+                        <option value="positivo">Positivo</option>
+                        <option value="negativo">Negativo</option>
+                        <option value="neutro">Neutro</option>
+                        <option value="sinClasificar">Sin Clasificar</option>
+                    </select>
+                </div>
+                <button type="button" id="applyFilters" class="btn">Aplicar Filtros</button>
+                <button type="button" id="clearFilters" class="btn">Limpiar Filtros</button>
+                <button type="button" id="sortByPopularity" class="btn">Ordenar por Popularidad</button>
+                <button type="button" id="sortByDate" class="btn">Ordenar por Fecha</button>
+            </form>
+        </section>
+
+        <!-- Publicaciones -->
+        <section class="posts">
+            <h2>Publicaciones</h2>
+            <div id="postsContainer" class="posts-container">
+                <!-- Aquí se generarán los posts -->
             </div>
         </section>
 
-        <section class="progress-bar">
-            <div id="progress" class="progress"></div>
-            <div id="semaforo" class="semaforo">Evaluación pendiente...</div>
-        </section>
-
-        <section class="results">
-            <div id="resultado" class="output">Esperando transcripción...</div>
-            <div id="kpiContainer" class="kpi-container">
-                <div id="totalTimeKPI" class="kpi">⏳ Tiempo Total: 0s</div>
-                <div id="asesorTimeKPI" class="kpi">💼 Tiempo Asesor: 0s</div>
-                <div id="clienteTimeKPI" class="kpi">👤 Tiempo Cliente: 0s</div>
-            </div>
-
-            <div id="chartContainer">
-                <canvas id="pieChart"></canvas>
-            </div>
-        </section>
-
-        <section id="chatBox" class="chat-box"></section>
-        <section id="recomendaciones" class="output">Recomendaciones: </section>
+        <!-- Pie de página -->
+        <footer class="footer">
+            <p>© 2024 - Análisis de Instagram</p>
+        </footer>
     </div>
 
-    <!-- Librerías necesarias -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+    <!-- Referencia al archivo JavaScript -->
     <script src="app.js"></script>
 </body>
 </html>
